fixed hat working on tranq

--- a/CustomItems-main/CustomItems/CustomItems.csproj
+++ b/CustomItems-main/CustomItems/CustomItems.csproj
@@ -9,9 +9,10 @@
     <AssemblyVersion>7.1.2</AssemblyVersion>
     <FileVersion>7.1.2</FileVersion>
     <Company>Exiled-Team</Company>
+	  <TargetFramework>netstandard2.1</TargetFramework>
+	  <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
-  <Import Project="../../Plugin.props" />
 
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
@@ -20,17 +21,21 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EXILED" Version="$(ExiledVersion)" />
-    <PackageReference Include="StyleCop.Analyzers" Version="$(StyleCopVersion)" IncludeAssets="All" PrivateAssets="All" />
-    <PackageReference Include="Lib.Harmony" Version="$(HarmonyVersion)" />
+    <PackageReference Include="ExMod.Exiled" Version="8.14.1" />
+    <PackageReference Include="Lib.Harmony" Version="2.3.3" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Unity" Version="5.11.10" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Assembly-CSharp-firstpass" HintPath="$(EXILED_REFERENCES)\Assembly-CSharp-firstpass.dll" Private="false" />
-    <Reference Include="Mirror" HintPath="$(EXILED_REFERENCES)\Mirror.dll" Private="false" />
-    <Reference Include="UnityEngine" HintPath="$(EXILED_REFERENCES)\UnityEngine.dll" Private="false" />
-    <Reference Include="UnityEngine.CoreModule" HintPath="$(EXILED_REFERENCES)\UnityEngine.CoreModule.dll" Private="false" />
-    <Reference Include="UnityEngine.PhysicsModule" HintPath="$(EXILED_REFERENCES)\UnityEngine.PhysicsModule.dll" Private="false" />
-    <Reference Include="YamlDotNet" HintPath="$(EXILED_REFERENCES)\YamlDotNet.dll" Private="false" />
+    <Reference Include="Assembly-CSharp-firstpass" HintPath="libs\Assembly-CSharp-firstpass.dll" Private="false" />
+    <Reference Include="Mirror" HintPath="libs\Mirror.dll" Private="false" />
+    <Reference Include="UnityEngine" HintPath="libs\UnityEngine.dll" Private="false" />
+    <Reference Include="UnityEngine.CoreModule" HintPath="libs\UnityEngine.CoreModule.dll" Private="false" />
+    <Reference Include="UnityEngine.PhysicsModule" HintPath="libs\UnityEngine.PhysicsModule.dll" Private="false" />
+    <Reference Include="YamlDotNet" HintPath="libs\YamlDotNet.dll" Private="false" />
   </ItemGroup>
 </Project>
